CORE-1178 multiple owner list fix spacing

--- a/src/ggrc/assets/stylesheets/_common.scss
+++ b/src/ggrc/assets/stylesheets/_common.scss
@@ -1281,7 +1281,6 @@ p {
 .inner-count-list {
   @include reset-list();
   li {
-    margin-left: -2px;
     margin-bottom: 6px;
     [class^="grcicon-"] {
       margin-top: 0 !important;
